--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,27 +7,20 @@ SET(CMAKE_CXX_FLAGS -pthread)
 include_directories(.)
 
 add_executable(project2_my
-        BestFS.cpp
         BestFS.h
-        BreadthFS.cpp
         BreadthFS.h
         CacheManager.h
-        ClientHandler.cpp
         ClientHandler.h
-        DFS.cpp
         DFS.h
-        FileCacheManager.cpp
         FileCacheManager.h
         GeneralServer.cpp
         GeneralServer.h
         main.cpp
-        Matrix.cpp
         Matrix.h
         MatrixClientHandler.cpp
         MatrixClientHandler.h
         MatrixSolver.cpp
         MatrixSolver.h
-        MyClientHandler.cpp
         MyClientHandler.h
         MySerialServer.cpp
         MySerialServer.h
@@ -36,16 +29,11 @@ add_executable(project2_my
         Point.cpp
         Point.h
         Searchable.h
-        SearchAlgorithm.cpp
         SearchAlgorithm.h
         Searcher.h
-        Server.cpp
         Server.h
         SocketCommunication.cpp
         SocketCommunication.h
         Solver.h
-        SolverSearcher.h
-        State.cpp
         State.h
-        StringReverser.cpp
-        StringReverser.h AStar.cpp AStar.h)
+        AStar.h)
